<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    android:id="@+id/card_view"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    card_view:cardElevation="@dimen/padding_and_cards"
    card_view:cardUseCompatPadding="true"
    card_view:cardCornerRadius="1dp">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="@dimen/padding_and_cards">

        <ImageView
            android:id="@+id/image_weather"
            android:layout_width="@dimen/icon_size_by_day"
            android:layout_height="@dimen/icon_size_by_day"
            android:contentDescription="@string/weather_icon"
            android:layout_alignParentEnd="true"/>

        <TextView
            android:id="@+id/weather_day_week"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/week_day"
            android:textSize="@dimen/date_by_day"
            android:textStyle="bold"
            android:textAppearance="?android:attr/textAppearanceLarge"/>

        <TextView
            android:id="@+id/weather"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/image_weather"
            android:layout_alignStart="@+id/image_weather"
            android:text="@string/temp_value"
            android:textColor="@color/temp"/>

        <TextView
            android:id="@+id/rain_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/rain_text"
            android:layout_below="@+id/weather_day_week"
            />
        <TextView
            android:id="@+id/winter_speed"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/winter"
            android:layout_below="@+id/rain_text"/>

        <TextView
            android:id="@+id/pressure"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/pressure"
            android:layout_below="@+id/winter_speed"/>

    </RelativeLayout>
</android.support.v7.widget.CardView>