<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    card_view:cardCornerRadius="1dp"
    card_view:cardElevation="@dimen/padding_and_cards"
    card_view:cardUseCompatPadding="true">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="@dimen/padding_and_cards">

        <TextView
            android:id="@+id/time_weather"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/date_and_hour"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:textSize="@dimen/date_by_day"
            android:textStyle="bold"/>

        <ImageView
            android:id="@+id/img"
            android:layout_width="@dimen/icon_size_by_day"
            android:layout_height="@dimen/icon_size_by_day"
            android:layout_alignParentEnd="true"
            android:contentDescription="@string/weather_icon"/>

        <TextView
            android:id="@+id/day_weather"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/time_weather"
            android:paddingTop="@dimen/padding_and_cards"
            android:text="@string/temp"
            android:textColor="@color/temp"
            android:textSize="20sp"/>
    </RelativeLayout>
</android.support.v7.widget.CardView>